# ebs-scaffold-serial-test

./: .gitignore  README.md  pyproject.toml  serial_test.orig.py  serial_test.py
src/ebs/tests/serial/: serial_test.py
src/ebs/tests/serial/drivers/: serialport.py
src/ebs/tests/serial/tests/: throughput.py
